--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,10 +4,13 @@ micronaut:
 
 datasources:
   default:
-    url: ${JDBC_URL:`jdbc:h2:mem:default;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE`}
-    username: ${JDBC_USER:sa}
-    password: ${JDBC_PASSWORD:""}
-    driverClassName: ${JDBC_DRIVER:org.h2.Driver}
+    url: ${JDBC_URL:`jdbc:postgresql://localhost:5432/testdb`}
+    username: ${JDBC_USER:test}
+    password: ${JDBC_PASSWORD:test}
+    dialect: POSTGRES
+    auto-commit: true
+    schema-generate: CREATE_DROP
+    driverClassName: ${JDBC_DRIVER:org.postgresql.Driver}
 
 jpa:
   default:
